--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,116 +1,131 @@
-/* CSSのリセット */
-html, body,
-ul, ol, li,
-h1, h2, h3, h4, h5, h6, p,
-form, input, div {
-    margin: 0;
-    padding: 0;
+/* CSS reset */
+html,
+body,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+form,
+input,
+div {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: "Avenir Next", "Hiragino Kaku Gothic ProN W3", sans-serif;
+  font-family: "Avenir Next", "Hiragino Kaku Gothic ProN W3", sans-serif;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 h1 {
-    font-size: 140px;
+  font-size: 140px;
 }
 
 h2 {
-    font-size: 60px;
+  font-size: 60px;
 }
 
 h3 {
-    border-bottom: 2px solid #dee7ec;
-    font-size: 28px;
-    margin-bottom: 50px;
-    padding-bottom: 15px;
+  border-bottom: 2px solid #dee7ec;
+  font-size: 28px;
+  margin-bottom: 50px;
+  padding-bottom: 15px;
 }
 
-input, textarea {
-    border: 1px solid #dee7ec;
-    margin-bottom: 30px;
-    padding: 20px;
-    width: 400px;
+input,
+textarea {
+  border: 1px solid #dee7ec;
+  font-size: 18px;
+  padding: 20px;
+  margin: 10px 0 30px 0;
+  width: 400px;
 }
 
-.header {
-    background-color: #26d0c9;
-    color: #fff;
-    height: 90px;
+span {
+  color: #ff4a4a;
+}
+
+header,
+footer {
+  color: #ffffff;
+}
+
+header {
+  background-color: #26d0c9;
+  height: 90px;
+}
+
+footer {
+  background-color: #2f5167;
+  height: 120px;
+  padding: 40px;
+}
+
+.container {
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+.logo {
+  float: left;
 }
 
 .header-logo {
-    float: left;
-    font-size: 36px;
-    padding: 20px 40px;
+  font-size: 36px;
+  padding: 20px 40px;
 }
 
 .header-list li {
-    float: left;
-    padding: 33px 20px;
+  float: left;
+  padding: 33px 20px;
 }
 
-.main {
-    padding-left: 80px;
-    padding-right: 80px;
-}
-
-.main-box {
-    padding-top: 100px;
-}
-
-.main-catch-copy span {
-    color: #ff4a4a;
+.catch-copy {
+  padding-top: 100px;
 }
 
 .main-contents {
-    height: 500px;
+  height: 500px;
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
 
-.contents-item {
-    float: left;
-    padding-right: 40px;
+.lesson {
+  float: left;
+  margin-right: 40px;
 }
 
-.contents-item p {
-    font-size: 24px;
-    padding-top: 30px;
+.lesson p {
+  font-size: 24px;
+  padding-top: 30px;
 }
 
-.main-contact-form {
-    padding-bottom: 100px;
-}
-
-.main-contact-form p {
-    padding-bottom: 10px;
+.contact-form {
+  padding-bottom: 100px;
 }
 
 .submit-button {
-    background-color: #dee7ec;
-    color: #889eab;
-    font-size: 18px;
-}
-
-.footer {
-    background-color: #2f5167;
-    color: #ffffff;
-    height: 120px;
-    padding: 40px;
+  background-color: #dee7ec;
+  color: #889eab;
 }
 
 .footer-logo {
-    float: left;
-    font-size: 32px;
+  font-size: 32px;
 }
 
 .footer-list {
-    float: right;
+  float: right;
 }
 
 .footer-list li {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
