--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,3 @@
-.btn {
-  display: inline-block;
+li {
   cursor: pointer;
-  padding: 8px 30px;
-  background-color: #5dca88;
-  box-shadow: 0px 5px #279c56;
-  border-radius: 3px;
-  color: #fff;
-  font-size: 10px;
-}
-
-.btn:active {
-  position: relative;
-  top: 5px;
-  box-shadow: none;
 }
