--- a/stylesheet.css
+++ b/stylesheet.css
@@ -202,12 +202,11 @@ header {
 .text-contents {
   margin: 3% auto;
   width: 80%;
-  display: none;
   font-size: 12px;
   color: #b3aeb5;
+  display: none;
 }
 
-/* ここに.text-activeのCSSを追加してください */
 .text-active {
   display: block;
 }
@@ -225,6 +224,33 @@ header {
   margin: 0 auto;
   padding: 0;
   list-style: none;
+}
+
+.faq-list-item {
+  margin: 10px;
+  border-bottom: 1px solid #ccc;
+  position: relative;
+  cursor: pointer;
+  text-align: left;
+}
+
+.faq-list-item h3 {
+  font-size: 14px;
+}
+
+.faq-list-item span {
+  position: absolute;
+  top: 0;
+  right: 5px;
+  color: #ccc;
+  font-size: 13px;
+}
+
+.answer {
+  font-size: 12px;
+  padding: 5px 0px;
+  margin-bottom: 15px;
+  display: none;
 }
 
 .message-wrapper {
