--- a/stylesheet.css
+++ b/stylesheet.css
@@ -202,9 +202,9 @@ header {
 .text-contents {
   margin: 3% auto;
   width: 80%;
+  display: none;
   font-size: 12px;
   color: #b3aeb5;
-  display: none;
 }
 
 .text-active {
@@ -226,6 +226,7 @@ header {
   list-style: none;
 }
 
+/*アコーディオン追加 */
 .faq-list-item {
   margin: 10px;
   border-bottom: 1px solid #ccc;
@@ -248,9 +249,9 @@ header {
 
 .answer {
   font-size: 12px;
+  display: none;
   padding: 5px 0px;
   margin-bottom: 15px;
-  display: none;
 }
 
 .message-wrapper {
