--- a/deliverable3/stylesheet.css
+++ b/deliverable3/stylesheet.css
@@ -46,6 +46,52 @@ h3::after {
   vertical-align: middle;
 }
 
+.section-content {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.call-to-action {
+  text-align: center;
+  font-size: 18px;
+}
+
+.option-wrapper {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.option-group {
+  margin-bottom: 12px;
+  margin: 20px auto;
+  display: inline-block;
+  margin: 20px auto;
+}
+
+.option-image {
+  width: 120px;
+  height: auto;
+}
+
+.option-btn {
+  cursor: pointer;
+  width: 154px;
+  margin: 10px;
+  padding: 12px 0;
+  text-align: center;
+  background-color: #5dca88;
+  box-shadow: 0px 4px #279c56;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 16px;
+}
+
+.option-btn:active {
+  position: relative;
+  top: 2px;
+  box-shadow: none;
+}
+
 .form .select-form,
 .form .text-form {
   margin: 0;
@@ -55,6 +101,9 @@ h3::after {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   font-weight: 300;
+  border-radius: 0;
+  box-shadow: none;
+  transition: all 0.3s;
   padding: 15px;
   background: rgba(0, 0, 0, 0.08);
 }
@@ -76,12 +125,14 @@ h3::after {
 .btn-submit {
   font-family: "Dosis", sans-serif;
   font-size: 20px;
+  font-weight: 600;
   background: #5983ff;
   border: 1px solid #5979ff;
-  border-radius: 3px;
   color: white;
+  box-shadow: inset 0 1px 0 #5867ed;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  transition: all 0.3s;
   padding: 12px 26px;
-  cursor: pointer;
 }
 
 .output-wrapper h4 {
@@ -93,6 +144,7 @@ h3::after {
   padding: 10px 20px;
   border: 2px dotted;
   border-radius: 3px;
+  width: 100%;
   margin-bottom: 60px;
 }
 
