--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -17,6 +17,17 @@ header {
 
 /* ここにコードを書いていきましょう */
 .profile {
+  padding: 56px 0;
+  margin: 0 auto 32px;
+  background-color: #ffffff;
+
+  .info {
+    margin-top: 16px;
+
+    p {
+      color: #2b546a;
+    }
+  }
 }
 
 footer {
