--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,10 +1,11 @@
-/* ここに@mixin cardを作成してください */
-@mixin card {
+/* @mixin cardに引数を与えてください */
+@mixin card($color) {
   padding: 40px 28px;
   margin: 16px 8px;
   display: inline-block;
   border-radius: 3px;
-  background-color: #ffffff;
+  /* background-colorの値を変えてください */
+  background-color: $color;
   img {
     margin: 16px auto 20px;
     display: block;
@@ -40,14 +41,13 @@ header {
   }
 }
 
-/* ここに.htmlを作成してください */
+/* @include cardの引数に値を指定してください */
 .html {
-  @include card;
+  @include card(#1bd7cf);
 }
-
-/* ここに.javascriptを作成してください */
+/* @include cardの引数に値を指定してください */
 .javascript {
-  @include card;
+  @include card(#ffe400);
 }
 
 footer {
