--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,4 +1,3 @@
-/* ここで_variables.scssを読み込んでください */
 @import "variables";
 
 @mixin card($color) {
@@ -28,7 +27,7 @@
 }
 
 body {
-  min-width: 460px;
+  min-width: 700px;
   text-align: center;
   font-family: "Hiragino Kaku Gothic ProN";
   background-color: #f0f5fc;
@@ -57,13 +56,15 @@ header {
 }
 
 .html {
-  /* 引数の値を変数を用いて置き換えてください */
   @include card($html);
 }
 
 .javascript {
-  /* 引数の値を変数を用いて置き換えてください */
   @include card($javascript);
+}
+
+.ruby {
+  @include card($ruby);
 }
 
 footer {
