[update]HTML whole structure

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,4 @@
-li {
-  color: #444;
-}
-
-/* selectedの文字の色を#ff0000にしてください */
-.selected {
-  color: #ff0000;
+/* body要素のfont-familyを"Avenir Next"にしてください */
+body {
+  font-family: "Avenir Next";
 }
