--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,14 +2,21 @@ body {
   font-family: "Avenir Next";
 }
 
-/* list-styleプロパティを用いて、<li>要素の黒点を取り除いてください */
 li {
   list-style: none;
+  /* floatプロパティをleftにしてください */
+  float: left;
 }
 
 .header {
   background-color: #f7f2b4;
   height: 90px;
+}
+
+/* header-logoの文字の大きさを36px、floatプロパティをleftにしてください */
+.header-logo {
+  font-size: 36px;
+  float: left;
 }
 
 .main {
