--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,35 +24,43 @@ li {
 }
 
 .main {
-  background-color: #bdf7f1;
-  height: 600px;
+  /* background-colorの指定を消してください */
+  /* heightの指定を消してください */
+  /* 上下のpaddingを100px、左右のpaddingを80pxにしてください */
+  padding: 100px 80px;
+}
+
+/* copy-containerの中のh1のfont-sizeを指定してください */
+.copy-container h1 {
+  font-size: 140px;
+}
+
+/* copy-containerの中のh2のfont-sizeを指定してください */
+.copy-container h2 {
+  font-size: 60px;
+}
+
+/* copy-containerの中のspanの色を指定してください */
+.copy-container span {
+  color: #ff4a4a;
 }
 
 .footer {
-  /* background-colorを#2f5167に変更してください */
   background-color: #2f5167;
-
-  /* colorを#fffにしてください */
-  color: #ffffff;
-
-  /* heightを120pxに変更してください */
+  color: #fff;
   height: 120px;
-  /* 上下左右のpaddingを40pxにしてください */
   padding: 40px;
 }
 
-/* footer-logoのfont-sizeとfloatを指定してください */
 .footer-logo {
-  font-size: 32px;
   float: left;
+  font-size: 32px;
 }
 
-/* footer-listのfloatを指定してください */
 .footer-list {
   float: right;
 }
 
-/* footer-listの中のli要素のpadding-bottomを指定してください */
 .footer-list li {
   padding-bottom: 20px;
 }
