--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,32 +41,45 @@ li {
 
 .contents {
   height: 500px;
-  /* margin-topを100pxにしてください */
   margin-top: 100px;
 }
 
 .section-title {
   border-bottom: 2px solid #dee7ec;
-  /* font-sizeを28pxにしてください */
   font-size: 28px;
-
-  /* padding-bottomを15pxにしてください */
   padding-bottom: 15px;
-
-  /* margin-bottomを50pxにしてください */
   margin-bottom: 50px;
 }
 
 .contents-item {
   float: left;
-  /* margin-rightを40pxにしてください */
   margin-right: 40px;
 }
 
-/* contents-itemの中のp要素のfont-size、margin-topを指定してください */
 .contents-item p {
   font-size: 24px;
   margin-top: 30px;
+}
+
+.contact-form {
+  padding-top: 100px;
+}
+
+/* inputとtextareaのCSSを指定してください */
+input,
+textarea {
+  width: 400px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  padding: 20px;
+  font-size: 18px;
+  border: 1px solid #dee7ec;
+}
+
+/* contact-submitのCSSを指定してください */
+.contact-submit {
+  background-color: #dee7ec;
+  color: #889eab;
 }
 
 .footer {
