--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,19 +27,37 @@ li {
 }
 
 /* ここからCSSを記述してください */
-header {
+.header {
   background-color: #26d0c9;
   color: #ffffff;
   height: 90px;
 }
 
-.header-logo p {
+.header-logo {
   font-size: 36px;
   float: left;
   padding: 20px 40px;
 }
 
-.header-list li {
+.header-list__item {
   padding: 33px 20px;
   float: left;
+}
+
+.main {
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+.main-title__primary {
+  padding-top: 100px;
+  font-size: 140px;
+}
+
+.main-title__primary span {
+  color: #ff4a4a;
+}
+
+.main-title__secondary {
+  font-size: 60px;
 }
