--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,3 +61,26 @@ li {
 .main-title__secondary {
   font-size: 60px;
 }
+
+.contents {
+  padding-top: 100px;
+  height: 500px;
+  padding-bottom: 100px;
+}
+
+.contents__title {
+  font-size: 28px;
+  border-bottom: 2px solid #dee7ec;
+  padding-bottom: 15px;
+}
+
+.contents__item {
+  float: left;
+  padding-top: 50px;
+  padding-right: 40px;
+}
+
+.contents__item p {
+  font-size: 24px;
+  padding-top: 30px;
+}
