--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,24 +63,45 @@ li {
 }
 
 .contents {
-  padding-top: 100px;
   height: 500px;
-  padding-bottom: 100px;
 }
 
-.contents__title {
+.heading {
   font-size: 28px;
   border-bottom: 2px solid #dee7ec;
+  margin-top: 100px;
   padding-bottom: 15px;
+  margin-bottom: 50px;
 }
 
 .contents__item {
   float: left;
-  padding-top: 50px;
   padding-right: 40px;
 }
 
 .contents__item p {
   font-size: 24px;
   padding-top: 30px;
+}
+
+.contact {
+  width: 400px;
+}
+
+.contact__title {
+  padding-bottom: 10px;
+}
+
+.contact__area {
+  width: 100%;
+  padding: 20px;
+  margin-bottom: 30px;
+  border: 1px solid #dee7ec;
+}
+
+.contact__submit {
+  font-size: 18px;
+  background-color: #dee7ec;
+  color: #889eab;
+  mb100
 }
