--- a/stylesheet.css
+++ b/stylesheet.css
@@ -103,5 +103,25 @@ li {
   font-size: 18px;
   background-color: #dee7ec;
   color: #889eab;
-  mb100
+  margin-bottom: 130px;
+}
+
+.footer {
+  background-color: #2f5167;
+  color: #ffffff;
+  padding: 40px;
+  height: 120px;
+}
+
+.footer-logo {
+  font-size: 32px;
+  float: left;
+}
+
+.footer-list {
+  float: right;
+}
+
+.footer-list__item {
+  padding-bottom: 20px;
 }
